--- a/song.html
+++ b/song.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Resume</title>
-		
+		<link rel="stylesheet" type="text/css" href="resume.css">
 		<link href="kamaro.png" rel="shortcut icon" type="type/png">
 	</head>
 	
