--- a/song.html
+++ b/song.html
@@ -23,7 +23,7 @@
 
 		<h2>Experience</h2>
 		<ul>
-			<li>Software aven at Hanyang University, Member<br>2015.01~2017.12</li>
+			<li>Software Maven at Hanyang University, Member<br>2015.01~2017.12</li>
 			<li>Kansas University, Member<br>2015.06~2015.08</li>
 		</ul>
 
